<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/mi_fristkey_entries"
        android:entryValues="@array/mi_fristkey_values"
        android:key="firstkey"
        android:title="@string/mipop_firstkey" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="mipop_switch"
        android:persistent="true"
        android:summary="@string/mipop_switch_summary"
        android:title="@string/mipop_switch_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="mipop_fullscreen"
        android:persistent="true"
        android:summary="@string/mipop_fullscreen_summary"
        android:title="@string/mipop_fullscreen_title" />
    <EditTextPreference
        android:key="alpha"
        android:title="@string/mipop_button_alpha_title" />
</PreferenceScreen>